--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
               <div id="come" class="carousel slide" data-bs-ride="carousel">
 
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="come" data-bs-slide-to="0" class="active"></button>
-                  <button type="button" data-bs-target="come" data-bs-slide-to="1"></button>
-                  <button type="button" data-bs-target="come" data-bs-slide-to="2"></button>
+                  <button type="button" data-bs-target="#come" data-bs-slide-to="0" class="active"></button>
+                  <button type="button" data-bs-target="#come" data-bs-slide-to="1"></button>
+                  <button type="button" data-bs-target="#come" data-bs-slide-to="2"></button>
                 </div>
         
                 <div class="carousel-inner">
@@ -112,10 +112,10 @@
                   </div>
                 </div>
         
-                <button class="carousel-control-prev" type="button" data-bs-target="come" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#come" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon"></span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="come" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#come" data-bs-slide="next">
                   <span class="carousel-control-next-icon"></span>
                 </button>
               </div>
